# Pseudo-Proxima

./: .env.example  .gitattributes  .gitignore  AGENT_FUNCTIONALITY_IMPLEMENTATION_GUIDE.md  AGENT_FUNCTIONALITY_IMPLEMENTATION_P2.md  BACKENDS_INFO.md  COMPREHENSIVE_COMPLETION_REPORT.md  Dockerfile  HOW_TO_ADD_ANY_CUSTOM_BACKEND.md  IMPLEMENTATION_STATUS_REPORT.md  LICENSE  LRET_BACKEND_VARIANTS_INTEGRATION_REPORT.md  README.md  SETUP_COMPLETE.md  TUI_GUIDE_FOR_PROXIMA.md  add_normalizers.py  analyze_backends.ps1  analyze_backends.py  bell_state.md  ersdellPicturesinternProximAPseudo-Proxima  ersdellPicturesinternProximAPseudo-Proxima  fix_stubs.py  how_to_build_agent_Readme.md  implementation_plan.md  mkdocs.yml  proxima.spec  pyproject.toml  pytest.ini  requirements-build.txt  test_experiment.py
.github/workflows/: backend-ci.yml  ci.yml  docs.yml  release.yml
configs/: backend_build_profiles.yaml  default.yaml
configs/benchmark_suites/: comprehensive.yaml  gpu.yaml  quick.yaml  standard.yaml
docs/: COMPETITIVE_ANALYSIS.md  index.md
docs/api-reference/: .gitkeep  cli.md  index.md  llm-router.md  pipeline.md
docs/api-reference/backends/: api.md  cuquantum.md  qsim.md  quest.md
docs/backends/: cuquantum-installation.md  cuquantum-usage.md  qsim-installation.md  qsim-usage.md
docs/developer-guide/: .gitkeep  adding-backends.md  architecture.md  backend-development.md  benchmark-architecture.md  contributing.md  extending-benchmarking.md  packaging.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/migration/: README.md  backend-migration.md  v0.1-to-v0.2.md  v0.2-to-v0.3.md
docs/plugins/: configuration.md  example-plugins.md  hooks-reference.md  plugin-api-reference.md  plugin-development.md
docs/user-guide/: .gitkeep  agent-files.md  benchmark-examples.md  benchmarking.md  cli-reference.md  comparing-backends.md  running-simulations.md  using-llm.md
exports/: algorithm_result_20260128_231718.json
packaging/: test_packaging.py
packaging/homebrew/: README.md  proxima.rb
scripts/: build.py
src/proxima/: __init__.py  __main__.py
src/proxima/agent/: __init__.py  admin_privilege_handler.py  agent_controller.py  alert_manager.py  backend_builder.py  backend_modifier.py  build_artifact_manager.py  build_progress_tracker.py  checkpoint_manager.py  code_intelligence.py  command_suggestions.py  consent_manager.py  dependency_manager.py  file_backup_system.py  file_content_search.py  file_system_operations.py  file_system_watcher.py  git_branch_manager.py  git_commit_workflow.py  git_conflict_resolver.py  git_diff_parser.py  git_operations.py  git_status_parser.py  github_auth.py  gpu_detector.py  historical_metrics.py  metric_collector.py  modification_preview.py  multi_terminal.py  multi_terminal_monitor.py  nl_command_parser.py  plan_executor.py  safety.py  script_executor.py  session_manager.py  stats_panel.py  task_planner.py  telemetry.py  temp_file_manager.py  terminal_executor.py  (+2 more)
src/proxima/api/: __init__.py  main.py  middleware.py
src/proxima/backends/: __init__.py  base.py  cirq_adapter.py  conversion.py  cuquantum_adapter.py  exceptions.py  execution.py  gpu_memory_manager.py  health.py  lret.py  lret_adapter.py  normalization.py  qiskit_adapter.py  qsim_adapter.py  quest_adapter.py  registry.py
src/proxima/benchmarks/: __init__.py  circuit_analyzer.py  comparator.py  error_handling.py  optimizations.py  profiler.py  runner.py  scheduler.py  statistics.py  suite.py  ux_enhancements.py  visualization.py
src/proxima/cli/: __init__.py  formatters.py  interactive.py  main.py  progress.py  prompts.py  utils.py  workflows.py
src/proxima/config/: __init__.py  defaults.py  export_import.py  migration.py  schema.py  secrets.py  settings.py  validation.py  watcher.py
src/proxima/core/: runner.py  (+9 more)
tests/: __init__.py  conftest.py  mocks.py  test_export_engine.py  test_tui.py  utils.py
tests/agent/: __init__.py  conftest.py  test_agent_controller.py  test_backend_modifier.py  test_git_operations.py  test_multi_terminal_monitor.py  test_safety.py  test_session_manager.py  test_telemetry.py  test_terminal_executor.py  test_tools.py
tests/api/: test_api_advanced.py  test_api_endpoints.py  test_api_realtime.py  test_api_security.py
tests/backends/: conftest.py  test_backend_selection.py  test_benchmark.py  test_cirq_comprehensive.py  test_cuquantum_adapter.py  test_cuquantum_advanced.py  test_integration.py  test_lret_comprehensive.py  test_qsim_adapter.py  test_qsim_advanced.py  test_quest_adapter.py  test_quest_advanced.py  test_validation.py
tests/benchmarks/: __init__.py  backend_benchmarks.py  circuit_benchmarks.py  comparison_benchmarks.py  run_benchmarks.py  test_benchmark_registry.py  test_benchmark_runner.py  test_benchmark_timer.py  test_resource_monitor.py  test_statistics.py  utils.py
tests/e2e/: __init__.py  test_agent_interpreter_e2e.py  test_cli_comprehensive.py  test_cli_e2e.py  test_llm_comparison_e2e.py  test_pipeline_store_export.py  test_workflow_e2e.py
tests/fixtures/: __init__.py  mock_agent.py
tests/integration/: test_agent_workflows.py  test_backend_benchmarking.py  test_backend_comparison.py  test_backend_comparison_benchmark.py  test_backend_integration.py  test_benchmark_performance.py  test_benchmark_suite_execution.py  test_cuquantum_integration.py  test_integration_comprehensive.py  test_integrations.py  test_lret_variants_integration.py  test_plugin_system.py  test_session_management.py
tests/performance/: __init__.py  test_agent_performance.py
tests/plugins/: test_example_plugins.py  test_plugin_system.py
tests/unit/: test_backend_edge_cases.py  test_backends.py  test_backends_comprehensive.py  test_cli.py  test_config_comprehensive.py  test_config_edge_cases.py  test_consent_audit.py  test_consent_comprehensive.py  test_intelligence.py  test_new_backends.py  test_phase10_error_handling.py  test_phase10_optimizations.py  test_phase10_ux.py  test_plugins.py  test_resources.py  test_state_machine.py  test_tui_components.py  test_tui_realtime.py  test_unit_core.py
(+180 files in other folders)
