[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxima"
version = "0.1.0"
description = "Intelligent Quantum Simulation Orchestration Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Proxima Team"}
]
keywords = ["quantum", "simulation", "orchestration", "quantum-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core dependencies
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    
    # Async support
    "anyio>=4.0.0",
    
    # Monitoring
    "psutil>=5.9.0",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # Data handling
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # State machine
    "transitions>=0.9.0",
    
    # Secret storage
    "keyring>=24.0.0",
    
    # Rich terminal output
    "rich>=13.0.0",
    
    # Quantum backends
    "cirq>=1.3.0",
    "qiskit>=0.45.0",
    "qiskit-aer>=0.13.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    
    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    
    # Type stubs
    "types-PyYAML",
    "pandas-stubs",
]

llm = [
    # LLM integrations
    "openai>=1.3.0",
    "anthropic>=0.7.0",
]

ui = [
    # Terminal UI
    "textual>=0.40.0",
]

all = [
    "proxima[dev,llm,ui]",
]

[project.scripts]
proxima = "proxima.cli.main:app"

[project.urls]
Homepage = "https://github.com/proxima-project/proxima"
Documentation = "https://proxima.readthedocs.io"
Repository = "https://github.com/proxima-project/proxima"
Issues = "https://github.com/proxima-project/proxima/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=proxima",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
