[build-system]
# Build system configuration - compatible with all Visual Studio versions
requires = [
    "setuptools>=68.0",
    "wheel",
    "build",
    # Cython is needed for some quantum packages, provide optional fallback
]
build-backend = "setuptools.build_meta"

[project]
name = "proxima-agent"
version = "0.1.0"
description = "Intelligent Quantum Simulation Orchestration Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Proxima Team", email = "team@proxima-project.io"}
]
maintainers = [
    {name = "Proxima Team", email = "team@proxima-project.io"}
]
keywords = [
    "quantum",
    "simulation",
    "orchestration",
    "quantum-computing",
    "cirq",
    "qiskit",
    "lret",
    "quantum-simulation",
    "cli",
    "agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    # Core dependencies
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    
    # Async support
    "anyio>=4.0.0",
    
    # Monitoring
    "psutil>=5.9.0",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # Data handling
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # State machine
    "transitions>=0.9.0",
    
    # Secret storage
    "keyring>=24.0.0",
    
    # Rich terminal output
    "rich>=13.0.0",
    
    # Quantum backends (core)
    "cirq>=1.3.0",
    "qiskit>=1.0.0",
    # Note: qiskit-aer moved to optional deps due to Windows compilation requirements
]

[project.optional-dependencies]
# Qiskit with high-performance simulator (requires C++ compiler on some platforms)
qiskit-aer = [
    "qiskit-aer>=0.15.0",
]

dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    
    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    
    # Type stubs
    "types-PyYAML",
    "pandas-stubs",
]

api = [
    # API Server
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "starlette>=0.35.0",
]

llm = [
    # LLM integrations
    "openai>=1.3.0",
    "anthropic>=0.7.0",
]

ui = [
    # Terminal UI
    "textual>=0.40.0",
]

docs = [
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "pygments>=2.17.0",
]

packaging = [
    # Binary builds
    "pyinstaller>=6.0.0",
]

all = [
    "proxima[dev,api,llm,ui,docs,packaging]",
]

# Full installation including qiskit-aer (may require C++ compiler on Windows)
full = [
    "proxima[all,qiskit-aer]",
]

[project.scripts]
proxima = "proxima.cli.main:app"

[project.urls]
Homepage = "https://github.com/proxima-project/proxima"
Documentation = "https://proxima.readthedocs.io"
Repository = "https://github.com/proxima-project/proxima"
Issues = "https://github.com/proxima-project/proxima/issues"
Changelog = "https://github.com/proxima-project/proxima/blob/main/CHANGELOG.md"

[project.entry-points."proxima.backends"]
cirq = "proxima.backends.cirq_adapter:CirqBackendAdapter"
qiskit = "proxima.backends.qiskit_adapter:QiskitBackendAdapter"
lret = "proxima.backends.lret:LRETBackendAdapter"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["proxima*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
proxima = [
    "py.typed",
    "configs/*.yaml",
    "resources/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=proxima",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (component interaction)",
    "e2e: End-to-end tests (full workflows)",
    "backend: Backend adapter tests",
    "performance: Performance/benchmark tests",
    "slow: Slow tests (may take > 1s)",
    "requires_network: Tests requiring network access",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in argument default (typer pattern)
    "B904",  # raise from in except (typer.Exit pattern)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in files that check package availability
"tests/test_tui.py" = ["F401"]
"tests/unit/test_backends.py" = ["F401"]
"src/proxima/utils/integrations.py" = ["F401"]
"src/proxima/data/export.py" = ["F401", "E722"]

[tool.ruff.lint.isort]
known-first-party = ["proxima"]
force-single-line = false
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "proxima.tui.*",
    "proxima.cli.formatters",
    "proxima.cli.progress",
    "proxima.cli.workflows",
    "proxima.cli.commands.compare",
    "proxima.backends.lret",
    "proxima.backends.conversion",
    "proxima.resources.audit",
    "proxima.data.export",
    "proxima.plugins.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "proxima.core.state",
    "proxima.core.planner",
    "proxima.core.executor",
]
# transitions library adds dynamic attributes
disable_error_code = ["attr-defined"]
